--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -180,9 +180,9 @@
             </td>
             <td>component</td>
             <td>AddUserDialogComponent</td>
-            <td align="right" data-sort="36">
-                <span class="coverage-percent">36 %</span>
-                <span class="coverage-count">(4/11)</span>
+            <td align="right" data-sort="30">
+                <span class="coverage-percent">30 %</span>
+                <span class="coverage-count">(3/10)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -468,21 +468,21 @@
             </td>
             <td>component</td>
             <td>IntroComponent</td>
-            <td align="right" data-sort="40">
-                <span class="coverage-percent">40 %</span>
-                <span class="coverage-count">(2/5)</span>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(2/6)</span>
             </td>
         </tr>
-        <tr class="medium">
+        <tr class="low">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/LoginComponent.html">src/app/startscreen/login/login.component.ts</a>
             </td>
             <td>component</td>
             <td>LoginComponent</td>
-            <td align="right" data-sort="28">
-                <span class="coverage-percent">28 %</span>
-                <span class="coverage-count">(6/21)</span>
+            <td align="right" data-sort="25">
+                <span class="coverage-percent">25 %</span>
+                <span class="coverage-count">(5/20)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -497,16 +497,16 @@
                 <span class="coverage-count">(1/3)</span>
             </td>
         </tr>
-        <tr class="medium">
+        <tr class="low">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/RegisterComponent.html">src/app/startscreen/register/register.component.ts</a>
             </td>
             <td>component</td>
             <td>RegisterComponent</td>
-            <td align="right" data-sort="26">
-                <span class="coverage-percent">26 %</span>
-                <span class="coverage-count">(5/19)</span>
+            <td align="right" data-sort="23">
+                <span class="coverage-percent">23 %</span>
+                <span class="coverage-count">(5/21)</span>
             </td>
         </tr>
         <tr class="medium">
@@ -528,9 +528,9 @@
             </td>
             <td>component</td>
             <td>StartscreenComponent</td>
-            <td align="right" data-sort="42">
-                <span class="coverage-percent">42 %</span>
-                <span class="coverage-count">(6/14)</span>
+            <td align="right" data-sort="47">
+                <span class="coverage-percent">47 %</span>
+                <span class="coverage-count">(8/17)</span>
             </td>
         </tr>
         <tr class="low">
@@ -660,9 +660,9 @@
             </td>
             <td>injectable</td>
             <td>AuthFirebaseService</td>
-            <td align="right" data-sort="68">
-                <span class="coverage-percent">68 %</span>
-                <span class="coverage-count">(15/22)</span>
+            <td align="right" data-sort="65">
+                <span class="coverage-percent">65 %</span>
+                <span class="coverage-count">(15/23)</span>
             </td>
         </tr>
         <tr class="low">
@@ -780,9 +780,9 @@
             </td>
             <td>injectable</td>
             <td>UserFirebaseService</td>
-            <td align="right" data-sort="60">
-                <span class="coverage-percent">60 %</span>
-                <span class="coverage-count">(15/25)</span>
+            <td align="right" data-sort="64">
+                <span class="coverage-percent">64 %</span>
+                <span class="coverage-count">(16/25)</span>
             </td>
         </tr>
         <tr class="low">
