--- a/documentation/injectables/UserFirebaseService.html
+++ b/documentation/injectables/UserFirebaseService.html
@@ -327,8 +327,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="79"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:79</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="84"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:84</a></div>
                         </td>
                     </tr>
 
@@ -423,8 +423,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="88"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:88</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="93"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:93</a></div>
                         </td>
                     </tr>
 
@@ -501,8 +501,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="186"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:186</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="191"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:191</a></div>
                         </td>
                     </tr>
 
@@ -580,8 +580,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="99"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:99</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="104"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:104</a></div>
                         </td>
                     </tr>
 
@@ -661,8 +661,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="158"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:158</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="163"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:163</a></div>
                         </td>
                     </tr>
 
@@ -779,8 +779,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="206"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:206</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="211"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:211</a></div>
                         </td>
                     </tr>
 
@@ -856,8 +856,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="225"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:225</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="229"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:229</a></div>
                         </td>
                     </tr>
 
@@ -972,8 +972,8 @@ Unsubscribes from any active subscription.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="175"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:175</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="180"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:180</a></div>
                         </td>
                     </tr>
 
@@ -1050,8 +1050,8 @@ Unsubscribes from any active subscription.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="121"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:121</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="126"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:126</a></div>
                         </td>
                     </tr>
 
@@ -1126,14 +1126,16 @@ Unsubscribes from any active subscription.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="56"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:56</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="61"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:61</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Sorts an array of users</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -1144,6 +1146,7 @@ Unsubscribes from any active subscription.</p>
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -1158,6 +1161,12 @@ Unsubscribes from any active subscription.</p>
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>user to sort</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -1167,7 +1176,10 @@ Unsubscribes from any active subscription.</p>
 
                         </div>
                             <div class="io-description">
-                                
+                                <ul>
+<li>sorted users</li>
+</ul>
+
                             </div>
                 </td>
             </tr>
@@ -1195,8 +1207,8 @@ Unsubscribes from any active subscription.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="146"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:146</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="151"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:151</a></div>
                         </td>
                     </tr>
 
@@ -1273,8 +1285,8 @@ Unsubscribes from any active subscription.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="66"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:66</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="71"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:71</a></div>
                         </td>
                     </tr>
 
@@ -1352,8 +1364,8 @@ Depending on if user.id is given</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="138"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:138</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="143"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:143</a></div>
                         </td>
                     </tr>
 
@@ -1391,8 +1403,8 @@ Depending on if user.id is given</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="130"
-                                    class="link-to-prism">src/services/user-firebase.service.ts:130</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="135"
+                                    class="link-to-prism">src/services/user-firebase.service.ts:135</a></div>
                         </td>
                     </tr>
 
@@ -1723,6 +1735,11 @@ export class UserFirebaseService {
     }
 
 
+    /**
+     * Sorts an array of users
+     * @param users - user to sort 
+     * @returns - sorted users
+     */
     sortByUsersByName(users: User[]) {
         return users.slice().sort((a, b) &#x3D;&gt; a.fullName.localeCompare(b.fullName));
     }
@@ -1883,7 +1900,6 @@ export class UserFirebaseService {
             }
             return false;
         } else {
-            console.log(&quot;Error: User Data could not be loaded&quot;);
             return false;
         }
     }
